[package]
name = "jget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.89"
serde = {version = "1.0.147", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "jget"
path = "main.rs"
